--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,8 @@
 server {
-    listen       80;
-    server_name  localhost;
-    root   /app/;
+    listen 80;
+    listen [::]:80;
+    server_name byso.xyz www.byso.xyz;
+    root   /var/www/html/storefront;
     
     location / {
         index  index.html;
